Fix sparkle small button icon spacing

--- a/projects/sparkle-ui/styles/components/sparkle-button.component.scss
+++ b/projects/sparkle-ui/styles/components/sparkle-button.component.scss
@@ -70,6 +70,7 @@ $sparkleButton: false !default;
       --btn-font: var(--paragraph-30);
 
       padding: p2r(0 8);
+      gap: p2r(4);
     }
 
     &[disabled] {
